# digikolleg-utility-tool

./: .gitignore  LICENSE  README.md  app.py  image.py  llm.py  logger.py  models.py  n8n.sh  posts_db.py  pyproject.toml
fend/: input.css
static/: inecosys.css
templates/: index.html  init-approve.html  layout.html  new-post.html  posts.html  prep-images.html  queue-new-post.html  queue-notification.html  request-notification.html
utilitytool/utilitytool-fend/: package.json  pnpm-lock.yaml
utilitytool/utilitytool-fend/app/: layout.tsx
utilitytool/utilitytool-fend/app/content-calander/: page.tsx
utilitytool/utilitytool-fend/app/new-post/: page.tsx
utilitytool/utilitytool-fend/app/photo-watermark/: page.tsx
utilitytool/utilitytool-fend/lib/: conf.ts
