[project]
name = "inecosysllm"
version = "0.4.19"
description = "LMbacked service to help boost Inecosys marketing in early stages of the company"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "flask>=3.1.1",
    "pillow>=11.2.1",
    "pyotp>=2.9.0",
    "python-dotenv>=1.1.0",
]
