[project]
name = "inecosysllm"
version = "0.4.19"
description = "LMbacked service to help boost Inecosys marketing in early stages of the company"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "pillow>=11.2.1",
    "pyotp>=2.9.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.42",
    "torch>=2.7.1",
    "transformers>=4.54.1",
]
